--- a/Jose_Urena_LS_DS_222_assignment.ipynb
+++ b/Jose_Urena_LS_DS_222_assignment.ipynb
@@ -189,7 +189,7 @@
         "else:\n",
         "    DATA_PATH = '../data/'"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -201,7 +201,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "b7fd6d05-84a9-479a-855f-41b0f3363735"
+        "outputId": "ec65cc8e-1fe0-44f6-ce42-8606641811c2"
       },
       "source": [
         "import pandas as pd\n",
@@ -214,7 +214,7 @@
         "\n",
         "train.shape, test.shape"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -226,7 +226,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 5
         }
       ]
     },
@@ -239,13 +239,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 195
         },
-        "outputId": "1f63e55c-8dc5-4ecd-af7a-176f31110b39"
+        "outputId": "31aa31ff-2494-43ff-be22-3246425af3f7"
       },
       "source": [
         "labels = pd.read_csv(DATA_PATH+'waterpumps/train_labels.csv')\n",
         "labels.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -315,7 +315,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 6
         }
       ]
     },
@@ -328,12 +328,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 417
         },
-        "outputId": "6a46d997-1081-4ec2-e52d-907949f4eb80"
+        "outputId": "ae937052-1b94-4bec-f981-311b8df1e1dc"
       },
       "source": [
         "test.head()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -633,7 +633,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 7
         }
       ]
     },
@@ -648,7 +648,7 @@
         "import numpy as np\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -662,7 +662,7 @@
         "train, val = train_test_split(train, train_size=0.80, test_size=0.20,\n",
         "                              stratify=train['status_group'], random_state=42)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -709,7 +709,7 @@
         "\n",
         "  return X"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -724,7 +724,7 @@
         "val1 = wrangle(val)\n",
         "test1 = wrangle(test)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -789,7 +789,7 @@
         "#     # return the wrangled dataframe\n",
         "#     return X"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -812,7 +812,7 @@
       "source": [
         "target = 'status_group'"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -828,7 +828,7 @@
         "cardinality = train_features.select_dtypes(exclude='number').nunique()\n",
         "categorical_features = cardinality[cardinality <=50].index.tolist()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -845,7 +845,7 @@
         "y_val = val1[target]\n",
         "X_test = test1"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -857,7 +857,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 70
         },
-        "outputId": "28c3564c-5528-4b58-c51a-15529e415da3"
+        "outputId": "1aba9029-983e-4a9c-ff11-f8433bf44384"
       },
       "source": [
         "import category_encoders as ce\n",
@@ -865,7 +865,7 @@
         "from sklearn.impute import SimpleImputer\n",
         "from sklearn.pipeline import make_pipeline"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -884,9 +884,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 84
+          "height": 67
         },
-        "outputId": "e21b2f11-e2f3-4f8c-910a-60b48a091a6a"
+        "outputId": "f193ae5c-4ccc-4ae2-e639-dbc68ee5b79c"
       },
       "source": [
         "%%time\n",
@@ -894,21 +894,19 @@
         "pipeline = make_pipeline(ce.OrdinalEncoder(),\n",
         "                         SimpleImputer(strategy='median'),\n",
         "                         RandomForestClassifier(random_state=0, \n",
-        "                                                n_jobs=-1,)\n",
+        "                                                n_jobs=-1,max_depth=25,n_estimators=800)\n",
         "                         )\n",
         "pipeline.fit(X_train, y_train)\n",
-        "print('Validation Accuracy', pipeline.score(X_val, y_val))\n",
-        "print('Train Accuracy', pipeline.score(X_train, y_train))"
+        "print('Validation Accuracy', pipeline.score(X_val, y_val))"
       ],
-      "execution_count": 14,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Validation Accuracy 0.8092592592592592\n",
-            "Train Accuracy 0.9999579124579124\n",
-            "CPU times: user 21.4 s, sys: 308 ms, total: 21.7 s\n",
-            "Wall time: 12.2 s\n"
+            "Validation Accuracy 0.8143097643097643\n",
+            "CPU times: user 2min 23s, sys: 1.71 s, total: 2min 24s\n",
+            "Wall time: 1min 14s\n"
           ],
           "name": "stdout"
         }
@@ -919,100 +917,40 @@
       "metadata": {
         "id": "4BkfGJ08rnnv",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 50
-        },
-        "outputId": "c1ca6dd2-3eb4-4131-a8f6-8d7ebd110f9b"
+        "colab": {}
       },
       "source": [
         "y_pred = pipeline.predict(X_test)\n",
         "y_pred"
       ],
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array(['non functional', 'functional', 'functional', ..., 'functional',\n",
-              "       'functional', 'non functional'], dtype=object)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 15
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "1wnz0RxMt_3u",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 672
-        },
-        "outputId": "4c3d4438-83d9-4333-a0fd-60ee8fe79a43"
+        "colab": {}
       },
       "source": [
         "pipeline.named_steps"
       ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'ordinalencoder': OrdinalEncoder(cols=['funder', 'installer', 'wpt_name', 'basin', 'subvillage',\n",
-              "                      'region', 'lga', 'ward', 'public_meeting',\n",
-              "                      'scheme_management', 'scheme_name', 'permit',\n",
-              "                      'extraction_type', 'extraction_type_group',\n",
-              "                      'extraction_type_class', 'management', 'management_group',\n",
-              "                      'payment', 'water_quality', 'quality_group', 'quantity',\n",
-              "                      'source', 'source_type', 'source_class', 'wate...\n",
-              " dtype: int64},\n",
-              "                         {'col': 'waterpoint_type', 'data_type': dtype('O'),\n",
-              "                          'mapping': communal standpipe             1\n",
-              " hand pump                      2\n",
-              " other                          3\n",
-              " communal standpipe multiple    4\n",
-              " improved spring                5\n",
-              " cattle trough                  6\n",
-              " dam                            7\n",
-              " NaN                           -2\n",
-              " dtype: int64},\n",
-              "                         {'col': 'waterpoint_type_group',\n",
-              "                          'data_type': dtype('O'),\n",
-              "                          'mapping': communal standpipe    1\n",
-              " hand pump             2\n",
-              " other                 3\n",
-              " improved spring       4\n",
-              " cattle trough         5\n",
-              " dam                   6\n",
-              " NaN                  -2\n",
-              " dtype: int64}],\n",
-              "                return_df=True, verbose=0),\n",
-              " 'randomforestclassifier': RandomForestClassifier(bootstrap=True, ccp_alpha=0.0, class_weight=None,\n",
-              "                        criterion='gini', max_depth=None, max_features='auto',\n",
-              "                        max_leaf_nodes=None, max_samples=None,\n",
-              "                        min_impurity_decrease=0.0, min_impurity_split=None,\n",
-              "                        min_samples_leaf=1, min_samples_split=2,\n",
-              "                        min_weight_fraction_leaf=0.0, n_estimators=100,\n",
-              "                        n_jobs=-1, oob_score=False, random_state=0, verbose=0,\n",
-              "                        warm_start=False),\n",
-              " 'simpleimputer': SimpleImputer(add_indicator=False, copy=True, fill_value=None,\n",
-              "               missing_values=nan, strategy='median', verbose=0)}"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 16
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zdRsngIhWckj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "rev = input()"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1023,9 +961,9 @@
       },
       "source": [
         "sub2_JU = pd.DataFrame({\"id\":test['id'],\"status_group\":y_pred})\n",
-        "sub2_JU.to_csv('waterpumps_sub2_JU', index=False)"
+        "sub2_JU.to_csv(f'waterpumps_sub2{rev}_JU', index=False)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
